{
  "version": 4,
  "terraform_version": "1.4.3",
  "serial": 73,
  "lineage": "38b3a1e2-6fe4-5dc1-7eaf-8ab6a3349053",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "voinc-eip",
      "provider": "module.ec2_instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0820a45c448a33a",
            "association_id": "eipassoc-0e59c1072276d30dd",
            "domain": "vpc",
            "id": "eipalloc-0a0820a45c448a33a",
            "instance": "i-0583f5ea431681ad7",
            "network_border_group": "us-east-2",
            "network_interface": "eni-023a6cca89bbf79cc",
            "private_dns": "ip-10-0-1-190.us-east-2.compute.internal",
            "private_ip": "10.0.1.190",
            "public_dns": "ec2-18-219-196-154.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.196.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "voinc-backend",
      "provider": "module.ec2_instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a695f0d95cefc163",
            "arn": "arn:aws:ec2:us-east-2:997625559881:instance/i-0583f5ea431681ad7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-0583f5ea431681ad7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "voinc",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-023a6cca89bbf79cc",
            "private_dns": "ip-10-0-1-190.us-east-2.compute.internal",
            "private_ip": "10.0.1.190",
            "public_ip": "18.219.196.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00189a8b6a51b4762",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac46cbed7a2ef3e0",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04974f4d1f0e9314d"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.ec2-profile",
            "module.ec2_instance.aws_security_group.default-sg",
            "module.ec2_instance.aws_subnet.voinc-subnet",
            "module.ec2_instance.aws_vpc.voinc-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-voinc",
      "provider": "module.ec2_instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:997625559881:internet-gateway/igw-0f41b838fdeb28e1e",
            "id": "igw-0f41b838fdeb28e1e",
            "owner_id": "997625559881",
            "vpc_id": "vpc-0e4102f636a6a8e34"
          },
          "dependencies": [
            "module.ec2_instance.aws_vpc.voinc-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "voinc-nic",
      "provider": "module.ec2_instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:997625559881:network-interface/eni-000426030b165d1f5",
            "attachment": [
              {
                "attachment_id": "eni-attach-03c605d3cf4e108e7",
                "device_index": 1,
                "instance": "i-0583f5ea431681ad7"
              }
            ],
            "id": "eni-000426030b165d1f5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:4c:33:d4:7e:35",
            "owner_id": "997625559881",
            "private_ip": "10.0.1.10",
            "private_ip_list": [
              "10.0.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04974f4d1f0e9314d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac46cbed7a2ef3e0"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.default-sg",
            "module.ec2_instance.aws_subnet.voinc-subnet",
            "module.ec2_instance.aws_vpc.voinc-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_route",
      "name": "voinc-route",
      "provider": "module.ec2_instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f41b838fdeb28e1e",
            "id": "r-rtb-0bef033275d01eba01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bef033275d01eba0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_internet_gateway.igw-voinc",
            "module.ec2_instance.aws_route_table.voinc-rt",
            "module.ec2_instance.aws_vpc.voinc-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "voinc-rt",
      "provider": "module.ec2_instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:997625559881:route-table/rtb-0bef033275d01eba0",
            "id": "rtb-0bef033275d01eba0",
            "owner_id": "997625559881",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f41b838fdeb28e1e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "voinc-rt"
            },
            "tags_all": {
              "Name": "voinc-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4102f636a6a8e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_vpc.voinc-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "voinc-rta",
      "provider": "module.ec2_instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d87c32ec00374f0a",
            "route_table_id": "rtb-0bef033275d01eba0",
            "subnet_id": "subnet-0ac46cbed7a2ef3e0"
          },
          "dependencies": [
            "module.ec2_instance.aws_route_table.voinc-rt",
            "module.ec2_instance.aws_subnet.voinc-subnet",
            "module.ec2_instance.aws_vpc.voinc-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default-sg",
      "provider": "module.ec2_instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:997625559881:security-group/sg-04974f4d1f0e9314d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04974f4d1f0e9314d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-sg20230331022309393800000001",
            "name_prefix": "default-sg",
            "owner_id": "997625559881",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e4102f636a6a8e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_vpc.voinc-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "voinc-subnet",
      "provider": "module.ec2_instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:997625559881:subnet/subnet-0ac46cbed7a2ef3e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac46cbed7a2ef3e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "997625559881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "voinc-subnet"
            },
            "tags_all": {
              "Name": "voinc-subnet"
            },
            "vpc_id": "vpc-0e4102f636a6a8e34"
          },
          "dependencies": [
            "module.ec2_instance.aws_vpc.voinc-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "voinc-vpc",
      "provider": "module.ec2_instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:997625559881:vpc/vpc-0e4102f636a6a8e34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07b40c3c4b723d3ce",
            "default_route_table_id": "rtb-01ca49ed73fb58141",
            "default_security_group_id": "sg-0ca6246ce2da177d8",
            "dhcp_options_id": "dopt-04e07da79c818202d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e4102f636a6a8e34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ca49ed73fb58141",
            "owner_id": "997625559881",
            "tags": {
              "Name": "voinc-vpc"
            },
            "tags_all": {
              "Name": "voinc-vpc"
            }
          }
        }
      ]
    }
  ]
}